# Copyright (c) 2025 Oleksiy Oleksandrovych Sayankin. All Rights Reserved.
# Refer to the LICENSE file in the root directory for full license details.

[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel==0.47.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "mdds-python-worker-runtime"
version = "0.1.0"
description = "Python Worker Runtime for the MDDS job orchestration platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [
    { name = "Oleksiy Oleksandrovych Sayankin" }
]

[project.scripts]
mdds-worker-runtime = "mdds_worker_runtime.main:main"

[tool.setuptools]
package-dir = { "" = "src/main/python" }

[tool.setuptools.packages.find]
where = ["src/main/python"]
include = ["mdds_worker_runtime*"]
